chore(guid): added postman doc
